<?xml version="1.0"?>
<package format="2">
  <name>rarog_bringup</name>
  <version>0.0.0</version>
  <description>The rarog_bringup package</description>

  <maintainer email="vooon341@gmail.com">Vladimir Ermakov</maintainer>
  <author email="vooon341@gmail.com">Vladimir Ermakov</author>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/rarog_bringup</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>mavros</depend>
  <depend>ntpd_driver</depend>
  <!-- until we use Ubuntu 14.04 we need that package -->
  <depend>robot_upstart</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
  <!-- vim:set et ts=2 sw=2 -->
</package>
